			labelWithString:font:size:  -> Not changed
			labelWithString:dimension:hAlign:font:size -> labelWithString:font:size:dimension:hAlign:
			labelWithString:dimension:hAlign:vAlign:font:size -> labelWithString:font:size:dimension:hAlign:vAlign:
. [NEW] Node: Added RotationalSkew featur (compatible with Flash)
. [NEW] Tests: Tests for RotationalSkew feature
. [FIX] MenuItemToggle: Don't remove tag of added item.
. [FIX] Node & BatchNode: RENDER_IN_SUBPIXEL works as expected.
. [FIX] LabelBMFont: removed forward declarations for tFontDefHashElement and tKerningHashElement. They are in the header now.
			Don't assert if character is not found. Just continue with logging the warning.
. [FIX] LabelTTF: loads custom fonts correctly on Mac
. [FIX] ProgressTimer: reverseDirection properly releases vertex if needed.

version 2.0.0 8-Jul-2012
. [FIX] EventDispatcher: fixed ccMouseEnter/Exit
. [FIX] LabelTTF: supports multiline even if no dimensions are provided
. [FIX] Macros: CCLOGERROR defined in ccDeprecated as CCLOGWARN
. [FIX] Scheduler: removeUpdateFromHash calls [target release] at the very end to prevent a possible crash
. [FIX] Templates: Generate no-flicker-at-startup code
		Improved Physics templates: multitouch and gravity+accel works OK
. [FIX] TexturePVR: wrong type when calculating PVR lenght
. [FIX] Xcode: Fixed compile errors and warnings in Xcode 4.5
. [3RD] libpng: updated to 1.2.49

version 2.0-rc2 03-Jun-2012
. [NEW] Added Javascript test using JSCocoa (Mac only)
			ActionTests, SpriteTests (WIP)
. [NEW] Director: Added popToRootScene method
. [NEW] RenderTexture: Added support for Depth Stencil
. [FIX] Actions: CardinalSpline#copy uses tension (issue #1377)
			CallFunc: fixed possible crash when releasing the action (issue #1369)
. [FIX] ccArray: Implementation is no longer inlined. Needed for gen_bridge_metada.
		Make it compatible with C99
		Added __cplusplus #ifdef in header